force-app/main/default/objects/OpportunityLineItem__c/OpportunityLineItem__c.object-meta.xml
<CustomObject>
    <label>Opportunity Line Item</label>
    <nameField>
        <label>Opportunity Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunities Line Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>