force-app/main/default/objects/OpportunityLineItem__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities Line Item</relationshipLabel>
    <relationshipName>Opportunities_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>